style.css
:root {
	font-family: sans-serif;
	line-height: 1.5;
	font-size: 1.2rem;

	--exact: green;
	--subset: orange;
	--nope: red;
	--invalid: red;
	--highlight: blue;
	--cancelled: gray;

	--toprule: 0.15rem;
	--midrule: calc(0.5 * var(--toprule));
	--totally-rules: 0.01rem;

	--sidebar-width: 19rem;
	--sidebar-gap: 1rem;
	--details-popup-width: 35rem;
}

@media (prefers-color-scheme: dark) {
	:root {
		--exact: green;
		--subset: orange;
		--nope: deeppink;
		--invalid: deeppink;
		--highlight: yellow;
	}
}

body {
	width: 60rem;
	max-width: 98vw;
	margin: auto;
}

nav>ul {
	line-height: normal;
}

@media screen and (min-width: 80rem) {
	body {
		width: auto;
	}

	nav {
		position: sticky;
		top: 0.5rem;
		width: var(--sidebar-width);
		float: left;
		max-height: calc(100vh - 0.5rem - 2rem);
		/* 2rem for the footer */
		overflow-y: auto;
	}

	nav>h2 {
		margin-block-start: 0;
	}

	main {
		margin-inline-start: calc(var(--sidebar-width) + var(--sidebar-gap));
	}

	main .restrained {
		width: 60rem;
		max-width: calc(98vw - (var(--sidebar-width) + var(--sidebar-gap)));
	}

	main .meeting-container {
		display: grid;
		grid-template-columns: repeat(auto-fit, 40rem);
		gap: 1rem;
	}

	.meeting>details>pre {
		position: absolute;
		margin: 0;
		padding: 1rem;
		background-color: light-dark(white, black);
		color: light-dark(black, white);
		max-width: var(--details-popup-width);
	}

	footer {
		position: fixed;
		left: 0;
		bottom: 0;
		width: var(--sidebar-width);
	}

	footer>p {
		margin: 0;
	}
}

select {
	font-size: inherit;
}

ol.clashing li {
	border-block-end: var(--totally-rules) solid currentColor;
}

.meeting {
	--accent-color: black;
	border-radius: 0.5rem;
	margin-block-end: 1rem;
	border: 4px solid var(--accent-color);
}

.meeting>* {
	padding-inline: 1rem;
}

.meeting>div {
	background-color: var(--accent-color);
	color: contrast-color(var(--accent-color));
}

/* This is the heading, but we know not which level */
.meeting>div>:first-child {
	margin: 0;
	padding-block-start: 0.5rem;
	font-size: 1rem;
}

.meeting>div>p {
	margin: 0;
	padding-block-start: 0.25rem;
	padding-block-end: 0.5rem;
	font-size: 0.8rem;
	display: flex;
	justify-content: space-between;
}

.meeting>dl {
	padding-block: 0;
}

.meeting>details {
	margin-block-end: 1rem;
}

.meeting.match-exact {
	--accent-color: var(--exact);
}

.meeting.match-subset {
	--accent-color: var(--subset);
}

.meeting.match-miss {
	--accent-color: var(--nope);
}

.meeting.invalid {
	--accent-color: var(--invalid);
	border: 4px dashed var(--accent-color);
}

.meeting.cancelled {
	--accent-color: var(--cancelled);
}

:target.meeting {
	outline: 2px solid var(--highlight);
	outline-offset: 6px;
}

dl {
	display: grid;
	grid-template-columns: max-content auto;
}

dt {
	font-weight: bold;
}

dt::after {
	content: ':'
}

summary {
	cursor: pointer;
}

pre {
	white-space: pre-wrap;
	word-wrap: break-word;
}

table {
	border-collapse: collapse;
	width: 100%;
}

th {
	font-weight: bold;
}

th,
td {
	padding-inline: 0.5rem;
}

thead tr:first-child {
	border-block-start: var(--toprule) solid currentColor;
	border-block-end: var(--midrule) solid currentColor;
}

tr {
	border-block-end: var(--totally-rules) solid currentColor;
}

tr:last-child {
	border-block-end: var(--toprule) solid currentColor;
}

table ul {
	list-style-type: none;
	padding: 0;
}

